Corrected spacing in trade modal Corrected style of backup asset dropdown in settings

--- a/dev/app/assets/css/main.css
+++ b/dev/app/assets/css/main.css
@@ -1985,3 +1985,17 @@ a {
   /*display: table-cell;*/
   vertical-align: middle;
 }
+
+.trade-info{
+  padding-bottom: 10px;
+}
+.trade-modal-btn{
+  padding-top: 15px; 
+}
+.backup-asset{
+  width: 100%;
+  background: #fff;
+  color: #333;
+  border: 1px;
+
+}
